--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -16,14 +16,13 @@
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
-
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -32,7 +31,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">NavBar</a>
+                        <a class="navbar-brand" href="#"><img src="img/attainx-logo.jpg" alt="Attanix Logo"/></a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav  navbar-right">
@@ -69,6 +68,7 @@
                                         </ul>
                                     </li>
                                 </ul>
+                                <li><a href="#" target="_blank">Certifications</a></li>
                                 <li><a href="#" target="_blank">Clients</a></li>
                                 <li><a href="#" target="_blank">Contact us</a></li>
                             </li>
@@ -77,48 +77,38 @@
                       </div>
                     </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-        <!-- Carousel
-================================================== -->
-
-<div id="myCarousel" class="carousel slide">
-  <!-- Indicators -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="img/main1.jpg" class="img-responsive">
-      <div class="container">
-        <div class="carousel-caption"> Test 1
-          </div>
-      </div>
-    </div>
-    <div class="item">
-      <img src="https://placeholdit.imgix.net/~text?txtsize=125&txt=1500%C3%97500&w=1500&h=500" class="img-responsive">
-      <div class="container">
-        <div class="carousel-caption">
-            Test 2
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <img src="https://placeholdit.imgix.net/~text?txtsize=125&txt=1500%C3%97500&w=1500&h=500" class="img-responsive">
-      <div class="container">
-        <div class="carousel-caption">
-
-        </div>
-      </div>
-    </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <i class="glyphicon glyphicon-chevron-left"></i>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <i class="glyphicon glyphicon-chevron-right"></i>
-  </a>
-    </div>
-</div>
-
-<!-- Features -->
+                    <!-- HERO UNIT -->
+                    		<section class="hero-unit-slider slider-responsive no-margin">
+                    			<div id="carousel-hero" class="slick-carousel">
+                    				<div class="carousel-inner" role="listbox">
+                    					<div class="item active">
+                    						<img src="img/main1.png" class="img-responsive" alt="Slider Image">
+                    						<div class="carousel-caption">
+                    							<h2 class="hero-heading">GLOBAL COMPANY</h2>
+                    							<p class="lead">AttainX Inc - your one stop shop for Information Technology Solutions</p>
+                    							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+                    						</div>
+                    					</div>
+                    					<div class="item">
+                    						<img src="img/main2.png" class="img-responsive" alt="Slider Image">
+                    						<div class="carousel-caption">
+                    							<h2 class="hero-heading">GLOBAL COMPANY</h2>
+                    							<p class="lead">AttainX Inc - your one stop shop for Information Technology Solutions</p>
+                    							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+                    						</div>
+                    					</div>
+                    					<div class="item">
+                    						<img src="img/main1.png" class="img-responsive" alt="Slider Image">
+                    						<div class="carousel-caption">
+                    							<h2 class="hero-heading">GLOBAL COMPANY</h2>
+                    							<p class="lead">AttainX Inc - your one stop shop for Information Technology Solutions</p>
+                    							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+                    						</div>
+                    					</div>
+                    				</div>
+                    			</div>
+                    		</section>
+                    		<!-- END HERO UNIT -->
 
 <div class="main-features ">
 			<div class="container">
@@ -134,34 +124,201 @@
 				</div>
 			</div>
 		</div>
+    <!-- INTRO -->
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<h2 class="section-heading">KNOW ATTANIX</h2>
+						<p class="lead">AttainX has seen this company develop in specialized technologies and technology-enabled services geared toward the federal and commercial sectors.</p>
+						<p>Energistically architect leading-edge users and inexpensive internal or "organic" sources. Distinctively evolve e-business resources after progressive intellectual capital. Objectively architect maintainable technologies via strategic convergence. Continually optimize stand-alone expertise with e-business e-services. Continually conceptualize client-centered opportunities and.</p>
+						<p>Dynamically customize backward-compatible processes via front-end models. Distinctively evisculate an expanded array of scenarios after virtual information. Professionally predominate technically sound resources through impactful mindshare. Efficiently drive viral interfaces without inexpensive value. Credibly.</p>
+					</div>
+					<div class="col-md-6">
+						<img src="img/intro-img.png" class="img-responsive" alt="Image Intro">
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END INTRO -->
+    <!-- BOXED CONTENT -->
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="boxed-content left-aligned left-boxed-icon">
+							<i class="fa fa-flag"></i>
+							<h2 class="boxed-content-title">GOAL ORIENTED</h2>
+							<p>Our passion is to be an example of excellence. We exceed in our comitments to our clients in terms of Technology, People and Services.</p>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="boxed-content left-aligned left-boxed-icon">
+							<i class="fa fa-globe"></i>
+							<h2 class="boxed-content-title">GLOBAL SERVICE</h2>
+							<p>Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate ubiquitous outsourcing through an expanded array of functionalities.</p>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="boxed-content left-aligned left-boxed-icon">
+							<i class="fa fa-cog"></i>
+							<h2 class="boxed-content-title">FLEXIBLE</h2>
+							<p>Our clients needs are Unique and different, we as a team have the ability to deal with new challenges and match our subject matter resources with the clients business needs.</p>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="boxed-content left-aligned left-boxed-icon">
+							<i class="fa fa-users"></i>
+							<h2 class="boxed-content-title">PROFESSIONAL SUPPORT</h2>
+							<p>We have an very highly skilled and experienced team, our passion is to work with our client in their mission and delivery the best of skills that leads our client to flawless delivery and success.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END BOXED CONTENT -->
+    <!-- LATEST CERTIFICAITON -->
+		<section>
+			<div class="container">
+				<h2 class="section-heading">CERTIFICAITONS</h2>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="news-item news-featured">
+							<a href="#"><img src="img/sba-logo.png" class="img-responsive" alt="News Thumbnail"></a>
+							<h3 class="news-title"><a href="#">SBA’s 8(a)</a></h3>
+              <div class="news-meta">
+								<span class="news-datetime">Small Business Administrations 8(a) Certification</span>
+								<!--<span class="news-comment-count pull-right"><a href="#">65 Comments</a></span>-->
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8">
+						<div class="row">
+							<div class="col-md-6 col-sm-6">
+								<div class="news-item margin-bottom-30px clearfix">
+									<a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive pull-left" alt="News Thumbnail"></a>
+									<div class="right">
+										<h3 class="news-title"><a href="#">EDWOSB</a></h3>
+										<p>Economically Disadvantaged Woman Owned Small Business</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-sm-6">
+								<div class="news-item margin-bottom-30px clearfix">
+									<a href="#"><img src="img/wosb.jpg" class="img-responsive pull-left" alt="News Thumbnail"></a>
+									<div class="right">
+										<h3 class="news-title"><a href="#">WOSB</a></h3>
+										<p>Woman Owned Small Business</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-sm-6">
+								<div class="news-item margin-bottom-30px clearfix">
+									<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive pull-left" alt="News Thumbnail"></a>
+									<div class="right">
+										<h3 class="news-title"><a href="#">SDB</a></h3>
+										<p>Small Disadvantaged Business</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-sm-6">
+								<div class="news-item margin-bottom-30px clearfix">
+									<a href="#"><img src="img/swam-logo.jpg" class="img-responsive pull-left" alt="News Thumbnail"></a>
+									<div class="right">
+										<h3 class="news-title"><a href="#">SWAM</a></h3>
+										<p>Small, women and Minority-Owned</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END LATEST CERTIFICAITON -->
+    <!-- NUMBERS -->
+		<section class="full-width-section no-margin">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-3 col-xs-6">
+						<div class="number-info horizontal text-white-color">
+							<i class="fa fa-rocket pull-left"></i>
+							<p>6+ <span>CERTIFICATIONS</span></p>
+						</div>
+					</div>
+					<div class="col-sm-3 col-xs-6">
+						<div class="number-info horizontal text-white-color">
+							<i class="fa fa-cubes pull-left"></i>
+							<p>273 <span>PROJECTS</span></p>
+						</div>
+					</div>
+					<div class="col-sm-3 col-xs-6">
+						<div class="number-info horizontal text-white-color">
+							<i class="fa fa-thumbs-up pull-left"></i>
+							<p>640K <span>APPRECIATIONS</span></p>
+						</div>
+					</div>
+					<div class="col-sm-3 col-xs-6">
+						<div class="number-info horizontal text-white-color">
+							<i class="fa fa-users pull-left"></i>
+							<p>132 <span>CLIENTS</span></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END NUMBERS -->
+    <!-- TESTIMONIAL -->
+		<section id="testimoial-parallax" class="testimonial-with-bg parallax">
+			<div class="container">
+				<div class="testimonial slick-carousel">
+					<div class="testimonial-container">
+						<div class="testimonial-body">
+							<p>Credibly extend parallel relationships after clicks-and-mortar content. Credibly pontificate team building alignments rather than diverse quality vectors.</p>
+							<div class="testimonial-author">
+								<img src="img/ceo.png" alt="Author" class="pull-left">
+								<span><span class="author-name">Name of CEO</span> <em>CEO of Attanix</em></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END TESTIMONIAL -->
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-    </div> <!-- /container -->
+		<!-- OUR CLIENTS -->
+		<section class="clients">
+			<div class="container">
+				<h2 class="section-heading">OUR CLIENTS</h2>
+				<ul class="list-inline list-client-logo">
+					<li>
+						<a href="#"><img src="img/logo1.png" alt="logo"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/logo2.png" alt="logo"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/logo1.png" alt="logo"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/logo2.png" alt="logo"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/logo1.png" alt="logo"></a>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<!-- END OUR CLIENTS -->
+
+
       <section class="call-to-action">
 			<div class="container">
 				<div class="pull-left">
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Call us at (1800) 765 - 4321 or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Call us at (202) 400 - 2259 or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
@@ -172,15 +329,15 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
+						<img src="img/attainx-logo.jpg" alt="Attanix Logo"/>
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
 							<ul class="list-unstyled">
-								<li>1234 North Main Street
-									<br> New York, NY 222222</li>
-								<li>Phone: (1800) 765 - 4321</li>
-								<li>Email: email@yourdomain.com</li>
+								<li>725 Church Street, Suite 505
+									<br> Lynchburg, VA 24504</li>
+								<li>Phone: (202) 400 - 2259</li>
+								<li>Email: operations@attainx.com</li>
 							</ul>
 						</address>
 						<!-- END COLUMN 1 -->
@@ -230,11 +387,9 @@
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
         <script src="js/vendor/bootstrap.min.js"></script>
-
+        <script src="js/vendor/slick.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
