--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -390,6 +390,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/slick.min.js"></script>
+        <script src="js/vendor/jquery.stellar.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
