--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -37,14 +37,14 @@
                         <ul class="nav navbar-nav  navbar-right">
                             <li class="active"><a href="#">Home</a></li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
 
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action [Menu 1.1]</a></li>
-                                    <li><a href="#">Another action [Menu 1.1]</a></li>
-                                    <li><a href="#">Something else here [Menu 1.1]</a></li>
+                                    <li><a href="#">OUR GOAL</a></li>
+                                    <li><a href="#">OUR TEAM</a></li>
+                                    <li><a href="#">FLEXIBILITY</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="#">Separated link [Menu 1.1]</a></li>
+                                    <li><a href="#">ADVISORY BOARD</a></li>
                                     <li class="divider"></li>
                                     <li><a href="#">One more separated link [Menu 1.1]</a></li>
                                     <li>
@@ -67,10 +67,35 @@
                                         </ul>
                                     </li>
                                 </ul>
-                                <li><a href="#" target="_blank">Certifications</a></li>
-                                <li><a href="#" target="_blank">Clients</a></li>
-                                <li><a href="#" target="_blank">About us</a></li>
-                                <li><a href="#" target="_blank">Contact us</a></li>
+                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">CERTIFICATIONS & CONTRACT VEHICLES<b class="caret"></b></a>
+	                                <ul class="dropdown-menu">
+	                                    <li><a href="#">CERTIFICATIONS</a></li>
+	                                    <li><a href="#">CONTRACT VEHILES</a></li>
+	                                </ul>    
+                                </li>
+                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<b class="caret"></b></a>
+                                 <ul class="dropdown-menu">
+	                                    <li><a href="#">STAFFING SOLUTIONS</a></li>
+	                                    <li><a href="#">PROGRAM AND PROJECT MANAGEMENT</a>
+	                                    </li>
+	                                    <li><a href="#">AGILE SOFTWARE DEVELOPMENT</a></li>
+	                                    <li><a href="#">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a>
+	                                    </li>
+	                                    <li><a href="#">GEOSPATIAL SOLUTIONS</a></li>
+	                                    <li><a href="#">ENTERPRISE SERVICE DESK</a>
+	                                    </li>
+	                                    <li><a href="#">TESTING AND IV&V</a></li>
+	                                    <li><a href="#">DATA CENTER CONSOLIDATION</a>
+	                                    </li>
+	                                    <li><a href="#">MOBILITY</a></li>
+	                                    <li><a href="#">BIG DATA</a>
+	                                    </li>
+	                                    <li><a href="#">SECURITY SOLUTIONS</a></li>
+	                             </ul>
+                                </li>
+                                <li><a href="#" target="_blank">CLIENTS</a></li>
+                                <li><a href="#" target="_blank">CAREERS</a></li>
+                                <li><a href="#" target="_blank">CONTACT US</a></li>
                             </li>
                           </ul>
                         </div>
