--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -35,9 +35,9 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav  navbar-right">
-                            <li class="active"><a href="#">Home</a></li>
+                            <li class="active"><a href="#">HOME</a></li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US<b class="caret"></b></a>
 
                                 <ul class="dropdown-menu">
                                     <li><a href="#">OUR GOAL</a></li>
