slick slider for hero image certifications and clients

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -105,7 +105,7 @@
                     <!-- HERO UNIT -->
                     		<section class="hero-unit-slider slider-responsive no-margin">
                      			<div class="slick-carousel">
-                     				<div class="responsive" role="listbox">
+                     				<div class="heroImage" role="listbox">
                      					<div>
                     					<img src="img/main2.png" class="img-responsive" alt="Slider Image">
                    
@@ -207,58 +207,35 @@
     <!-- LATEST CERTIFICAITON -->
 		<section>
 			<div class="container">
-				<h2 class="section-heading">CERTIFICATONS</h2>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="news-item news-featured">
+				<h2 class="section-heading certifications-heading">CERTIFICATONS</h2>
+				<div class="certifications">
+					    <div>
 							<a href="#"><img src="img/sba-logo.png" class="img-responsive" alt="News Thumbnail"></a>
-							<h3 class="news-title"><a href="#">SBA’s 8(a)</a></h3>
-              <div class="news-meta">
-								<span class="news-datetime">Small Business Administrations 8(a) Certification</span>
-								<!--<span class="news-comment-count pull-right"><a href="#">65 Comments</a></span>-->
-							</div>
 						</div>
-					</div>
-					<div class="col-md-8">
-						<div class="row">
-							<div class="col-md-6 col-sm-6">
-								<div class="news-item margin-bottom-30px clearfix">
-									<a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive pull-left" alt="News Thumbnail"></a>
-									<div class="right">
-										<h3 class="news-title"><a href="#">EDWOSB</a></h3>
-										<p>Economically Disadvantaged Woman Owned Small Business</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6">
-								<div class="news-item margin-bottom-30px clearfix">
-									<a href="#"><img src="img/wosb.jpg" class="img-responsive pull-left" alt="News Thumbnail"></a>
-									<div class="right">
-										<h3 class="news-title"><a href="#">WOSB</a></h3>
-										<p>Woman Owned Small Business</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6">
-								<div class="news-item margin-bottom-30px clearfix">
-									<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive pull-left" alt="News Thumbnail"></a>
-									<div class="right">
-										<h3 class="news-title"><a href="#">SDB</a></h3>
-										<p>Small Disadvantaged Business</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6">
-								<div class="news-item margin-bottom-30px clearfix">
-									<a href="#"><img src="img/swam-logo.jpg" class="img-responsive pull-left" alt="News Thumbnail"></a>
-									<div class="right">
-										<h3 class="news-title"><a href="#">SWAM</a></h3>
-										<p>Small, women and Minority-Owned</p>
-									</div>
-								</div>
-							</div>
+						<div>
+							<a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
 						</div>
-					</div>
+						<div>
+							<a href="#"><img src="img/wosb.jpg" class="img-responsive" alt="News Thumbnail"></a>
+						</div>
+						<div>
+							<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
+						</div>
+						<div>
+							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
+						</div>
+						<div>
+							<a href="#"><img src="img/wosb.jpg" class="img-responsive" alt="News Thumbnail"></a>
+						</div>
+						<div>
+							<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
+						</div>
+						<div>
+							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
+						</div>
+						<div>
+							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
+						</div>
 				</div>
 			</div>
 		</section>
@@ -314,10 +291,22 @@
 		<!-- END TESTIMONIAL -->
 
 		<!-- OUR CLIENTS -->
-		<section class="clients">
+		<section>
 			<div class="container">
-				<h2 class="section-heading">OUR CLIENTS</h2>
-				<ul class="list-inline list-client-logo">
+				<h2 class="section-heading clients-heading">OUR CLIENTS</h2>
+				<ul class="clients">
+					<li>
+						<a href="#"><img src="img/logo1.png" alt="logo"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/logo2.png" alt="logo"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/logo1.png" alt="logo"></a>
+					</li>
+					<li>
+						<a href="#"><img src="img/logo2.png" alt="logo"></a>
+					</li>
 					<li>
 						<a href="#"><img src="img/logo1.png" alt="logo"></a>
 					</li>
