--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav  navbar-right">
-                            <li class="active"><a href="#">HOME</a></li>
+                            <li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">HOME</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US<b class="caret"></b></a>
 
@@ -95,7 +95,7 @@
                                 </li>
                                 <li><a href="#" target="_blank">CLIENTS</a></li>
                                 <li><a href="#" target="_blank">CAREERS</a></li>
-                                <li><a href="#" target="_blank">CONTACT US</a></li>
+                                <li><a href="/Users/savroop%20singh/attainx/boilerplate/contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
                             </li>
                           </ul>
                         </div>
@@ -112,19 +112,9 @@
                    					</div>
                      					<div>
                      					<img src="img/main1.png" class="img-responsive" alt="Slider Image">
-                     						<!--<div class="carousel-caption">
-                     							<h2 class="hero-heading">GLOBAL COMPANY</h2>
-                     							<p class="lead">AttainX Inc - your one stop shop for Information Technology Solutions</p>
-                    							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-                     						</div> -->
                      					</div>
                      					<div>
                      					<img src="img/main3.png" class="img-responsive" alt="Slider Image">
-                     						<!--<div class="carousel-caption">
-                  							<h2 class="hero-heading">GLOBAL COMPANY</h2>
-                    							<p class="lead">AttainX Inc - your one stop shop for Information Technology Solutions</p>
-                    							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-                     						</div> -->
                      					</div>
                                       </div>
                                      </div>
