modified contact us and home page

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
@@ -37,7 +37,7 @@
                         <ul class="nav navbar-nav  navbar-right">
                             <li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">HOME</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US<b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US<i class="fa fa-angle-down"></i></a>
 
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Our Goal</a></li>
@@ -51,7 +51,7 @@
 	                                    <li><a href="#">Contract Vehicles</a></li>
 	                                </ul>
                                 </li>
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<b class="caret"></b></a>
+                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
                                  <ul class="dropdown-menu">
 	                                    <li><a href="#">Staffing Solutions</a></li>
 	                                    <li><a href="#">Program And Project Management</a>
@@ -73,31 +73,31 @@
                                 </li>
                                 <li><a href="#" target="_blank">CLIENTS</a></li>
                                 <li><a href="#" target="_blank">CAREERS</a></li>
-                                <li><a href="/Users/savroop%20singh/attainx/boilerplate/contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
+                                <li><a href="contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
                             </li>
                           </ul>
                         </div>
                       </div>
                     </nav>
-
                     <!-- HERO UNIT -->
-                    		<section class="hero-unit-slider slider-responsive no-margin">
-                     			<div class="slick-carousel">
-                     				<div class="heroImage" role="listbox">
-                     					<div>
-                    					<img src="img/main2.png" class="img-responsive" alt="Slider Image">
+                                        		<section class="hero-unit-slider slider-responsive no-margin">
+                                         			<div class="slick-carousel">
+                                         				<div class="heroImage" role="listbox">
+                                         					<div>
+                                        					<img src="img/main2.png" class="img-responsive" alt="Slider Image">
 
-                   					</div>
-                     					<div>
-                     					<img src="img/main1.png" class="img-responsive" alt="Slider Image">
-                     					</div>
-                     					<div>
-                     					<img src="img/main3.png" class="img-responsive" alt="Slider Image">
-                     					</div>
-                                      </div>
-                                     </div>
-                    		</section>
-                    		<!-- END HERO UNIT -->
+                                       					</div>
+                                         					<div>
+                                         					<img src="img/main1.png" class="img-responsive" alt="Slider Image">
+                                         					</div>
+                                         					<div>
+                                         					<img src="img/main3.png" class="img-responsive" alt="Slider Image">
+                                         					</div>
+                                                          </div>
+                                                         </div>
+                                        		</section>
+                                        		<!-- END HERO UNIT -->
+
 
 <div class="main-features ">
 			<div class="container">
@@ -123,7 +123,7 @@
             <p>We specialize in Information Technology Solutions, our expertise is in Software Application Development, Cyber Security solutions, Big Data, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
 					</div>
 					<div class="col-md-6">
-						<img src="img/intro-img.png" class="img-responsive" alt="Image Intro">
+						<img src="img/adobe-stock/AdobeStock_119981328.png" class="img-responsive" alt="Image Intro">
 					</div>
 				</div>
 			</div>
@@ -170,33 +170,25 @@
 			<div class="container">
 				<h2 class="section-heading certifications-heading">CERTIFICATIONS & CONTRACT VEHICLES</h2>
 				<div class="certifications">
-					    <div>
-							<a href="#"><img src="img/sba-logo.png" class="img-responsive" alt="News Thumbnail"></a>
+            <div>
+             <a href="#"><img src="img/contract-vehicle.jpg" class="img-responsive" alt=""></a>
+           </div>
+					  <div>
+							<a href="#"><img src="img/sba-logo.png" class="img-responsive" alt=""></a>
 						</div>
 						<div>
-							<a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
+							<a href="#"><img src="img/edwsob-logo.jpg" class="img-responsive" alt=""></a>
 						</div>
 						<div>
-							<a href="#"><img src="img/wosb.jpg" class="img-responsive" alt="News Thumbnail"></a>
+							<a href="#"><img src="img/wosb.jpg" class="img-responsive" alt=""></a>
 						</div>
 						<div>
-							<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
+							<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt=""></a>
 						</div>
 						<div>
-							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
+							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt=""></a>
 						</div>
-						<div>
-							<a href="#"><img src="img/wosb.jpg" class="img-responsive" alt="News Thumbnail"></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/sdb-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
-						</div>
-						<div>
-							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt="News Thumbnail"></a>
-						</div>
+
 				</div>
 			</div>
 		</section>
@@ -300,7 +292,7 @@
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Call us at (202) 400 - 2259 or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Email us at <a href="mailto:jobs@attainx.com">jobs@attainx.com</a> or</span>&nbsp;&nbsp;<a href="#" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
@@ -365,7 +357,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				©2017 The Develovers. All Rights Reserved.
+				©2017 Attanix all rights reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
