--- a/boilerplate/contactUs/contactUs.html
+++ b/boilerplate/contactUs/contactUs.html
@@ -14,94 +14,72 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="../css/main.css">
         <script src="../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <nav class="navbar navbar-default" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#"><img src="../img/attainx-logo.jpg" alt="Attanix Logo"/></a>
-                    </div>
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav  navbar-right">
-                            <li class="active"><a href="#">HOME</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US<b class="caret"></b></a>
+      <!--[if lt IE 8]>
+          <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <![endif]-->
+      <nav class="navbar navbar-default" role="navigation">
+              <div class="container">
+                  <div class="navbar-header">
+                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand" href="#"><img src="../img/attainx-logo.jpg" alt="Attanix Logo"/></a>
+                  </div>
+                  <div class="collapse navbar-collapse">
+                      <ul class="nav navbar-nav  navbar-right">
+                          <li><a href="#">HOME</a></li>
+                          <li class="dropdown">
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US<i class="fa fa-angle-down"></i></a>
 
+                              <ul class="dropdown-menu">
+                                  <li><a href="#">Our Goal</a></li>
+                                  <li><a href="#">Our Team</a></li>
+                                  <li><a href="#">Flexibility</a></li>
+                                  <li><a href="#">Advisory Board</a></li>
+                              </ul>
+                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cert's & CONTRACT VEHICLES<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Our Goal</a></li>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Flexibility</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Advisory Board</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">One more separated link [Menu 1.1]</a></li>
-                                    <li>
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown [Menu 1.1] <b class="caret"></b></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="#">Action [Menu 1.2]</a></li>
-                                            <li>
-                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown [Menu 1.2] <b class="caret"></b></a>
-                                                <ul class="dropdown-menu">
-                                                    <li>
-                                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown [Menu 1.3] <b class="caret"></b></a>
-                                                        <ul class="dropdown-menu">
-                                                            <li><a href="#">Action [Menu 1.4]</a></li>
-                                                            <li><a href="#">Another action [Menu 1.4]</a></li>
-                                                            <li><a href="#">Something else here [Menu 1.4]</a></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
+                                    <li><a href="#">Certifications</a></li>
+                                    <li><a href="#">Contract Vehicles</a></li>
                                 </ul>
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cert's & CONTRACT VEHICLES<b class="caret"></b></a>
-	                                <ul class="dropdown-menu">
-	                                    <li><a href="#">Certifications</a></li>
-	                                    <li><a href="#">Contract Vehicles</a></li>
-	                                </ul>    
-                                </li>
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<b class="caret"></b></a>
-                                 <ul class="dropdown-menu">
-	                                    <li><a href="#">Staffing Solutions</a></li>
-	                                    <li><a href="#">Program And Project Management</a>
-	                                    </li>
-	                                    <li><a href="#">Agile Software Development</a></li>
-	                                    <li><a href="#">ERP</a>
-	                                    </li>
-	                                    <li><a href="#">Geospatial Solutions</a></li>
-	                                    <li><a href="#">Enterprise Service Desk</a>
-	                                    </li>
-	                                    <li><a href="#">Testing And iv&v</a></li>
-	                                    <li><a href="#">Data Center Consolidation</a>
-	                                    </li>
-	                                    <li><a href="#">Mobility</a></li>
-	                                    <li><a href="#">Big Dta</a>
-	                                    </li>
-	                                    <li><a href="#">Security Solutions</a></li>
-	                             </ul>
-                                </li>
-                                <li><a href="#" target="_blank">CLIENTS</a></li>
-                                <li><a href="#" target="_blank">CAREERS</a></li>
-                                <li><a href="#" target="_blank">CONTACT US</a></li>
-                            </li>
-                          </ul>
-                        </div>
+                              </li>
+                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
+                               <ul class="dropdown-menu">
+                                    <li><a href="#">Staffing Solutions</a></li>
+                                    <li><a href="#">Program And Project Management</a>
+                                    </li>
+                                    <li><a href="#">Agile Software Development</a></li>
+                                    <li><a href="#">ERP</a>
+                                    </li>
+                                    <li><a href="#">Geospatial Solutions</a></li>
+                                    <li><a href="#">Enterprise Service Desk</a>
+                                    </li>
+                                    <li><a href="#">Testing And iv&v</a></li>
+                                    <li><a href="#">Data Center Consolidation</a>
+                                    </li>
+                                    <li><a href="#">Mobility</a></li>
+                                    <li><a href="#">Big Dta</a>
+                                    </li>
+                                    <li><a href="#">Security Solutions</a></li>
+                             </ul>
+                              </li>
+                              <li><a href="#" target="_blank">CLIENTS</a></li>
+                              <li><a href="#" target="_blank">CAREERS</a></li>
+                              <li><a href="contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
+                          </li>
+                        </ul>
                       </div>
-                    </nav>
-        <!-- BREADCRUMBS -->
+                    </div>
+                  </nav>
+                  <!-- HERO UNIT -->
 		<div class="page-header">
 			<div class="container">
 				<h1 class="page-title pull-left">Get in touch with us</h1>
@@ -179,8 +157,7 @@
 							<h3 class="widget-title">BUSINESS HOURS</h3>
 							<ul class="list-unstyled">
 								<li><strong>Monday-Friday: </strong> 8am to 5pm</li>
-								<li><strong>Saturday: </strong> 10am to 2pm</li>
-								<li><strong>Sunday: </strong> Closed</li>
+								<li><strong>Saturday & Sunday: </strong> Closed</li>
 							</ul>
 						</div>
 						<!-- END RIGHT SIDEBAR CONTENT -->
@@ -194,7 +171,6 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="../img/attainx-logo.jpg" alt="Attanix Logo"/>
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
