modified contact us and home page

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -45,7 +45,7 @@
                                     <li><a href="#">Flexibility</a></li>
                                     <li><a href="#">Advisory Board</a></li>
                                 </ul>
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cert's & CONTRACT VEHICLES<b class="caret"></b></a>
+                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cert's & CONTRACT VEHICLES<i class="fa fa-angle-down"></i></a>
 	                                <ul class="dropdown-menu">
 	                                    <li><a href="#">Certifications</a></li>
 	                                    <li><a href="#">Contract Vehicles</a></li>
@@ -84,14 +84,14 @@
                                          			<div class="slick-carousel">
                                          				<div class="heroImage" role="listbox">
                                          					<div>
-                                        					<img src="img/main2.png" class="img-responsive" alt="Slider Image">
+                                        					<img src="img/adobe-stock/AdobeStock_22160532_Preview.jpg" class="img-responsive" alt="Slider Image">
 
                                        					</div>
                                          					<div>
-                                         					<img src="img/main1.png" class="img-responsive" alt="Slider Image">
+                                         					<img src="img/adobe-stock/AdobeStock_87909563_Preview.jpg" class="img-responsive" alt="Slider Image">
                                          					</div>
                                          					<div>
-                                         					<img src="img/main3.png" class="img-responsive" alt="Slider Image">
+                                         					<img src="img/adobe-stock/AdobeStock_70334590_Preview.jpg" class="img-responsive" alt="Slider Image">
                                          					</div>
                                                           </div>
                                                          </div>
