--- a/boilerplate/contactUs/contactUs.html
+++ b/boilerplate/contactUs/contactUs.html
@@ -45,7 +45,7 @@
                                   <li><a href="#">Flexibility</a></li>
                                   <li><a href="#">Advisory Board</a></li>
                               </ul>
-                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cert's & CONTRACT VEHICLES<b class="caret"></b></a>
+                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cert's & CONTRACT VEHICLES<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Certifications</a></li>
                                     <li><a href="#">Contract Vehicles</a></li>
