sub page review files send

--- a/boilerplate/contactUs/contactUs.html
+++ b/boilerplate/contactUs/contactUs.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="../css/main.css">
         <script src="../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
@@ -224,11 +224,13 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				©2017 The Develovers. All Rights Reserved.
+				©2017 Attanix all rights reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCE4gqZHCYv24tj1_YLv4eNd6C_omyecZQ&callback=initMap" type="text/javascript"></script>
+ <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerwithlabel/1.1.8/src/markerwithlabel.js"></script>
+
  <script>
  	function initMap() {
     var latLng = new google.maps.LatLng(37.415116,-79.144288),
