--- a/boilerplate/aboutUs/aboutUs.html
+++ b/boilerplate/aboutUs/aboutUs.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
         <link rel="stylesheet" href="../css/main.css">
         <script src="../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
@@ -101,8 +101,14 @@
 						</div>
 						<div class="col-md-6">
 							<div class="featured-video">
-								<iframe src="//player.vimeo.com/video/40056491"></iframe>
+								<!--<iframe src="//player.vimeo.com/video/40056491"></iframe>-->
+                <video width="100%" controls>
+                  <source src="../img/adobe-stock/AdobeStock_42019667_Video_HD_Preview.mp4" type="video/mp4">
+                  Your browser does not support HTML5 video.
+                </video>
+
 							</div>
+
 						</div>
 					</div>
 					<br>
@@ -127,7 +133,7 @@ Our commitment to quality and delivery:  Our  team has the passion and determina
 					<div class="section-content">
 						<div class="col-md-5">
 							<div class="team-member media">
-								<img src="assets/img/team/person1.png" class="media-object img-circle pull-left" alt="" />
+								<img src="../img/person1.png" class="media-object img-circle pull-left" alt="" />
 								<div class="media-body">
 									<h3 class="media-heading team-name">Michael Summer</h3>
 									<strong>Executive Director</strong>
@@ -144,7 +150,7 @@ Our commitment to quality and delivery:  Our  team has the passion and determina
 						</div>
 						<div class="col-md-5 col-md-offset-2">
 							<div class="team-member media">
-								<img src="assets/img/team/person2.png" class="media-object img-circle pull-left" alt="" />
+								<img src="../img/person1.png" class="media-object img-circle pull-left" alt="" />
 								<div class="media-body">
 									<h3 class="media-heading team-name">Jane Doe</h3>
 									<strong>Art Director</strong>
@@ -161,7 +167,7 @@ Our commitment to quality and delivery:  Our  team has the passion and determina
 						</div>
 						<div class="col-md-5">
 							<div class="team-member media">
-								<img src="assets/img/team/person3.png" class="media-object img-circle pull-left" alt="" />
+								<img src="../img/person1.png" class="media-object img-circle pull-left" alt="" />
 								<div class="media-body">
 									<h3 class="media-heading team-name">Cindy Marry</h3>
 									<strong>UI Designer</strong>
@@ -179,7 +185,7 @@ Our commitment to quality and delivery:  Our  team has the passion and determina
 						</div>
 						<div class="col-md-5 col-md-offset-2">
 							<div class="team-member media">
-								<img src="assets/img/team/person4.png" class="media-object img-circle pull-left" alt="" />
+								<img src="../img/person1.png" class="media-object img-circle pull-left" alt="" />
 								<div class="media-body">
 									<h3 class="media-heading team-name">Phillips Abraham</h3>
 									<strong>Front-end Developer</strong>
@@ -305,7 +311,7 @@ Our commitment to quality and delivery:  Our  team has the passion and determina
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				©2017 The Develovers. All Rights Reserved.
+				©2017 Attanix all rights reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
