add new images and changes to Advisor page

--- a/boilerplate/aboutUs/advisoryBoard.html
+++ b/boilerplate/aboutUs/advisoryBoard.html
@@ -80,12 +80,15 @@
                     </div>
                   </nav>
                   <!-- HERO UNIT -->
-		<div class="page-header">
+		<div class="page-header has-intro">
 			<div class="container">
-				<h1 class="page-title pull-left">Our Advisory Board</h1>
+        <div class="left pull-left">
+					<h1 class="page-title">Our Advisor</h1>
+					<p class="page-header-intro">AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidence, and direction on future next steps for AttainX, offer thought leadership for products that AttainX is building on Big Data, Analytics, Mobility and Cloud.</p>
+				</div>
 				<ol class="breadcrumb">
 					<li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">Home</a></li>
-					<li class="active">Advisory Board</li>
+					<li class="active">Advisor</li>
 				</ol>
 			</div>
 		</div>
@@ -93,16 +96,13 @@
 		<!-- PAGE CONTENT -->
 		<div class="page-content">
 			<div class="container advisoryBoard">
-			    <div>
-			        <p>AttainX advisory board consists of former Federal and commercial C-Level executives. Our board meets every quarter and reviews the roadmap and strategies of AttainX. The advisory board provides guidence, and direction on future next steps for AttainX, offer thought leadership for products that AttainX is building on Big Data, Analytics, Mobility and Cloud.
-			        </p>
-			    </div>
 				<div class="row">
 					<div class="col-md-9">
-						<p>Natalia Olson-Urtecho was the Regional Administrator for the U.S. Small Business Administration, served as a Presidential Appointee from 2012-21017, she was responsible for delivery and management of small business programs, financial assistance, and business development initiatives throughout the mid-Atlantic region. She served a population of nearly 30 million in 7 district offices though out Pennsylvania; Delaware; Maryland.; West Virginia; Virginia, and Washington, D.C. Olson-Urtecho oversaw more than 180 SBA offices; SCORE chapters; Business Development Centers and other resources while managing a field staff of more than 100 loan, business, community outreach specialists and support personnel. She worked with local lenders and successful firms across the region, overseeing more than $34.2 billion in federal government contracts for goods and services purchased from local entrepreneurs. 
-						She has more than 18 years of experience working with international, regional and local entities in Latin America, Central Europe and Asia. She has professional experience in finance, government contracting, international collaboration, commercialization of clean technologies, environmental planning, sustainable building, zoning, land use, transportation, public engagement and infrastructure policies and development. She was appointed by the U.S. Secretary of Commerce to the U.S. Innovation Advisory Board and by Philadelphia's Mayor to the Philadelphia City Planning Commission and Zoning Code Commission boards. 
-						Olson-Urtecho was recently recognized as a “Latina Powerhouse” by the Maryland Hispanic Business Conference, was named one of Delaware Valley's (PA,NJ, DE) Most Influential Latinos in 2014, and received the Philadelphia Business Journal’s 2010 Minority Business Leader Award. In 2009 she received the Women of Distinction Award. She has lived in seven countries and speaks Spanish, French and Portuguese and was a guest lecturer at the University of Pennsylvania and Temple University. 
-						</p>
+            <h2 class="section-heading">Natalia Olson-Urtecho</h2>
+						<p>Natalia Olson-Urtecho was the Regional Administrator for the U.S. Small Business Administration, served as a Presidential Appointee from 2012-21017, she was responsible for delivery and management of small business programs, financial assistance, and business development initiatives throughout the mid-Atlantic region. She served a population of nearly 30 million in 7 district offices though out Pennsylvania; Delaware; Maryland.; West Virginia; Virginia, and Washington, D.C.</p> <p>Olson-Urtecho oversaw more than 180 SBA offices; SCORE chapters; Business Development Centers and other resources while managing a field staff of more than 100 loan, business, community outreach specialists and support personnel. She worked with local lenders and successful firms across the region, overseeing more than $34.2 billion in federal government contracts for goods and services purchased from local entrepreneurs.</p>
+						<p>She has more than 18 years of experience working with international, regional and local entities in Latin America, Central Europe and Asia. She has professional experience in finance, government contracting, international collaboration, commercialization of clean technologies, environmental planning, sustainable building, zoning, land use, transportation, public engagement and infrastructure policies and development. She was appointed by the U.S. Secretary of Commerce to the U.S. Innovation Advisory Board and by Philadelphia's Mayor to the Philadelphia City Planning Commission and Zoning Code Commission boards.</p>
+						<p>Olson-Urtecho was recently recognized as a “Latina Powerhouse” by the Maryland Hispanic Business Conference, was named one of Delaware Valley's (PA,NJ, DE) Most Influential Latinos in 2014, and received the Philadelphia Business Journal’s 2010 Minority Business Leader Award. In 2009 she received the Women of Distinction Award. She has lived in seven countries and speaks Spanish, French and Portuguese and was a guest lecturer at the University of Pennsylvania and Temple University.</p>
+          </br>
 					</div>
 					<div class="col-md-3">
 						<!-- RIGHT SIDEBAR CONTENT -->
@@ -110,12 +110,13 @@
 						<!-- END RIGHT SIDEBAR CONTENT -->
 					</div>
 				</div>
-				<div class="row">
+        <div class="row">
 					<div class="col-md-9">
-						<p>Natalia Olson-Urtecho was the Regional Administrator for the U.S. Small Business Administration, served as a Presidential Appointee from 2012-21017, she was responsible for delivery and management of small business programs, financial assistance, and business development initiatives throughout the mid-Atlantic region. She served a population of nearly 30 million in 7 district offices though out Pennsylvania; Delaware; Maryland.; West Virginia; Virginia, and Washington, D.C. Olson-Urtecho oversaw more than 180 SBA offices; SCORE chapters; Business Development Centers and other resources while managing a field staff of more than 100 loan, business, community outreach specialists and support personnel. She worked with local lenders and successful firms across the region, overseeing more than $34.2 billion in federal government contracts for goods and services purchased from local entrepreneurs. 
-						She has more than 18 years of experience working with international, regional and local entities in Latin America, Central Europe and Asia. She has professional experience in finance, government contracting, international collaboration, commercialization of clean technologies, environmental planning, sustainable building, zoning, land use, transportation, public engagement and infrastructure policies and development. She was appointed by the U.S. Secretary of Commerce to the U.S. Innovation Advisory Board and by Philadelphia's Mayor to the Philadelphia City Planning Commission and Zoning Code Commission boards. 
-						Olson-Urtecho was recently recognized as a “Latina Powerhouse” by the Maryland Hispanic Business Conference, was named one of Delaware Valley's (PA,NJ, DE) Most Influential Latinos in 2014, and received the Philadelphia Business Journal’s 2010 Minority Business Leader Award. In 2009 she received the Women of Distinction Award. She has lived in seven countries and speaks Spanish, French and Portuguese and was a guest lecturer at the University of Pennsylvania and Temple University. 
-						</p>
+            <h2 class="section-heading">Natalia Olson-Urtecho</h2>
+						<p>Natalia Olson-Urtecho was the Regional Administrator for the U.S. Small Business Administration, served as a Presidential Appointee from 2012-21017, she was responsible for delivery and management of small business programs, financial assistance, and business development initiatives throughout the mid-Atlantic region. She served a population of nearly 30 million in 7 district offices though out Pennsylvania; Delaware; Maryland.; West Virginia; Virginia, and Washington, D.C.</p> <p>Olson-Urtecho oversaw more than 180 SBA offices; SCORE chapters; Business Development Centers and other resources while managing a field staff of more than 100 loan, business, community outreach specialists and support personnel. She worked with local lenders and successful firms across the region, overseeing more than $34.2 billion in federal government contracts for goods and services purchased from local entrepreneurs.</p>
+						<p>She has more than 18 years of experience working with international, regional and local entities in Latin America, Central Europe and Asia. She has professional experience in finance, government contracting, international collaboration, commercialization of clean technologies, environmental planning, sustainable building, zoning, land use, transportation, public engagement and infrastructure policies and development. She was appointed by the U.S. Secretary of Commerce to the U.S. Innovation Advisory Board and by Philadelphia's Mayor to the Philadelphia City Planning Commission and Zoning Code Commission boards.</p>
+						<p>Olson-Urtecho was recently recognized as a “Latina Powerhouse” by the Maryland Hispanic Business Conference, was named one of Delaware Valley's (PA,NJ, DE) Most Influential Latinos in 2014, and received the Philadelphia Business Journal’s 2010 Minority Business Leader Award. In 2009 she received the Women of Distinction Award. She has lived in seven countries and speaks Spanish, French and Portuguese and was a guest lecturer at the University of Pennsylvania and Temple University.</p>
+            </br>
 					</div>
 					<div class="col-md-3">
 						<!-- RIGHT SIDEBAR CONTENT -->
