--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -37,42 +37,36 @@
                         <ul class="nav navbar-nav  navbar-right">
                             <li><a href="/Users/savroop%20singh/attainx/boilerplate/index.html">HOME</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US<i class="fa fa-angle-down"></i></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">OUR COMPANY<i class="fa fa-angle-down"></i></a>
 
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Our Goal</a></li>
-                                    <li><a href="#">Our Team</a></li>
-                                    <li><a href="#">Flexibility</a></li>
-                                    <li><a href="#">Advisory Board</a></li>
+                                    <li><a href="#">Overview</a></li>
+                                    <li><a href="#">News</a></li>
+                                    <li><a href="#">Advisors</a></li>
                                 </ul>
+                              </li>
+                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">SOLUTION & SERVICES<i class="fa fa-angle-down"></i></a>
+                               <ul class="dropdown-menu">
+                                    <li><a href="#">Agile Software Development</a></li>
+                                    <li><a href="#">DevOps</a></li>
+                                    <li><a href="#">Cloud & Cloud Migration Services</a></li>
+                                    <li><a href="#">Big Dta</a></li>
+                                    <li><a href="#">Cyber Security</a></li>
+                                    <li><a href="#">Shared Services</a></li>
+                                    <li><a href="#">Managed Services</a></li>
+                                    <li><a href="#">IV & V & Testing Servives</a></li>
+                                    <li><a href="#">Testing And iv&v</a></li>
+                                  </ul>
+                              </li>
+                              <li><a href="#" target="_blank">IOT</a></li>
                                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cert's & CONTRACT VEHICLES<i class="fa fa-angle-down"></i></a>
 	                                <ul class="dropdown-menu">
 	                                    <li><a href="#">Certifications</a></li>
 	                                    <li><a href="#">Contract Vehicles</a></li>
 	                                </ul>
                                 </li>
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
-                                 <ul class="dropdown-menu">
-	                                    <li><a href="#">Staffing Solutions</a></li>
-	                                    <li><a href="#">Program And Project Management</a>
-	                                    </li>
-	                                    <li><a href="#">Agile Software Development</a></li>
-	                                    <li><a href="#">ERP</a>
-	                                    </li>
-	                                    <li><a href="#">Geospatial Solutions</a></li>
-	                                    <li><a href="#">Enterprise Service Desk</a>
-	                                    </li>
-	                                    <li><a href="#">Testing And iv&v</a></li>
-	                                    <li><a href="#">Data Center Consolidation</a>
-	                                    </li>
-	                                    <li><a href="#">Mobility</a></li>
-	                                    <li><a href="#">Big Dta</a>
-	                                    </li>
-	                                    <li><a href="#">Security Solutions</a></li>
-	                             </ul>
-                                </li>
-                                <li><a href="#" target="_blank">CLIENTS</a></li>
-                                <li><a href="#" target="_blank">CAREERS</a></li>
+
+                                <li><a href="#" target="_blank">PARTNERS & CLIENTS</a></li>
                                 <li><a href="contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
                             </li>
                           </ul>
@@ -84,14 +78,14 @@
                                          			<div class="slick-carousel">
                                          				<div class="heroImage" role="listbox">
                                          					<div>
-                                        					<img src="img/adobe-stock/AdobeStock_22160532_Preview.jpg" class="img-responsive" alt="Slider Image">
+                                        					<img src="img/adobe-stock/hero-01-22160532.jpg" class="img-responsive" alt="Slider Image">
 
                                        					</div>
                                          					<div>
-                                         					<img src="img/adobe-stock/AdobeStock_87909563_Preview.jpg" class="img-responsive" alt="Slider Image">
+                                         					<img src="img/adobe-stock/hero-02-145438301.jpg" class="img-responsive" alt="Slider Image">
                                          					</div>
                                          					<div>
-                                         					<img src="img/adobe-stock/AdobeStock_70334590_Preview.jpg" class="img-responsive" alt="Slider Image">
+                                         					<img src="img/adobe-stock/hero-03-87909563.jpg" class="img-responsive" alt="Slider Image">
                                          					</div>
                                                           </div>
                                                          </div>
@@ -123,7 +117,7 @@
             <p>We specialize in Information Technology Solutions, our expertise is in Software Application Development, Cyber Security solutions, Big Data, Mobile Application development, Enterprise Service Desk solutions, IV&V, and ERP Implementation and Maintenance.</p>
 					</div>
 					<div class="col-md-6">
-						<img src="img/adobe-stock/AdobeStock_119981328.png" class="img-responsive" alt="Image Intro">
+						<img src="img/adobe-stock/home-main-119981328.png" class="img-responsive" alt="Image Intro">
 					</div>
 				</div>
 			</div>
