--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -54,8 +54,7 @@
                                     <li><a href="#">Cyber Security</a></li>
                                     <li><a href="#">Shared Services</a></li>
                                     <li><a href="#">Managed Services</a></li>
-                                    <li><a href="#">IV & V & Testing Servives</a></li>
-                                    <li><a href="#">Testing And iv&v</a></li>
+                                    <li><a href="#">IV&V and Testing Servives</a></li>
                                   </ul>
                               </li>
                               <li><a href="#" target="_blank">IOT</a></li>
