Corrected big data image and spacing

--- a/boilerplate/capability/bigData/bigData.html
+++ b/boilerplate/capability/bigData/bigData.html
@@ -95,8 +95,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-9">
-					    <div>
-					        <a href="#"><img src="../../img/buildings.jpg" class="img-responsive" alt="featured-image" /></a>
+					    <div class="featured-image">
+					        <a href="#"><img src="../../img/adobe-stock/big-data-main-87909563.jpg" class="img-responsive" alt="featured-image" /></a>
 					    </div>
 						<p>Big Data has become the latest means for obtaining insight into your customers and finding new ways to compete in the marketplace as comparing Big Data solutions to choose the best one is no trivial task, and once you commit, changing course becomes very difficult and expensive.</P><P>
 						AttainX Big Data consultants make data science serve the enterprises striving to harness complex data processing operations. Big data by its very definition means large data sets that it is very difficult to work with using normal database management tools and businesses are leveraging big data. Big Data technologies can process very large volumes of a variety of data sets, at high-velocity, to extract economic value.</P><P>
